<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NewAccountActivity"
    android:background="@color/almostWhite">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/AVATAR_USER"
        android:background="@drawable/border"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/label"
        android:text="@string/chooseimage"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_toRightOf="@id/imageView"

        />
    <ImageButton
        android:contentDescription="@string/new_account"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/pick"
        android:layout_marginTop="55dp"
        android:layout_toRightOf="@id/label"
        android:layout_marginLeft="20dp"
        android:background="@color/lightlightgray"
        android:src="@drawable/plus" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/editText2" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/editText3"
        android:layout_alignLeft="@+id/editText3" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/confirm"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_below="@+id/editText4"
        android:layout_alignLeft="@+id/editText4" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"


        />
</RelativeLayout>
