<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/almostWhite"
    android:clickable="true"
    android:id="@+id/addad2">

	<Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bottomborder"
        android:layout_alignParentLeft="true" 
        android:text="@string/next" />
	
     <EditText
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:hint="@string/description"
        android:textSize="14sp"
        android:layout_marginLeft="10dp"
        android:id="@+id/editText"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/button1" />

	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:layout_marginTop="30dp"
        android:id="@+id/textView1"
        android:layout_marginLeft="10dp"
        android:textColor="@color/orange"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area"
        android:layout_marginTop="30dp"
        android:id="@+id/textView2"
        android:layout_marginLeft="10dp"
        android:textColor="@color/orange"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner1"
        android:layout_alignBaseline="@id/textView1"
        android:layout_toRightOf="@+id/textView1" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_toRightOf="@id/textView2"
        android:layout_alignBaseline="@id/textView2"/>
    
     

</RelativeLayout>
