<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/almostWhite"
    android:clickable="true"
    android:id="@+id/addad">
	
    
	<Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bottomborder"
        android:text="@string/next" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
        android:text="@string/category"
        android:textSize="14sp"
        android:id="@+id/textView"
        android:textColor="@color/orange"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/button1"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner1"
        android:layout_alignBaseline="@id/textView"
        android:layout_toRightOf="@+id/textView" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="40dp"
        android:hint="@string/title" />
    
    
</RelativeLayout>
