<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/almostWhite"   
    android:id="@+id/addres"
    android:clickable="true">
	<Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bottomborder"
        android:text="@string/save_data" />

    <TextView
        android:id="@+id/labelSpinner1"
        android:layout_marginTop="20dp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:layout_below="@+id/button1"
        android:text="@string/title_activity_research"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/labelSpinner1"
        android:layout_alignBaseline="@id/labelSpinner1"
        android:id="@+id/spinner1"
        />

    <TextView
        android:id="@+id/labelSpinner2"
        android:layout_marginTop="25dp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:text="@string/city"
        android:layout_below="@+id/labelSpinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/labelSpinner2"
        android:layout_alignBaseline="@id/labelSpinner2"
        android:id="@+id/spinner2"
       />

    <TextView
        android:id="@+id/labelSpinner3"
        android:layout_marginTop="25dp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:text="@string/category"
        android:layout_below="@+id/labelSpinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_toRightOf="@id/labelSpinner3"
        android:layout_alignBaseline="@id/labelSpinner3"
        android:id="@+id/spinner3"
        />

    <TextView
        android:id="@+id/labelSpinner4"
        android:layout_marginTop="25dp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:text="@string/price"
        android:layout_below="@+id/labelSpinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/labelSpinner4"
        android:layout_alignBaseline="@id/labelSpinner4"
        android:id="@+id/spinner4"

      />

    <TextView
        android:id="@+id/labelSpinner5"
        android:layout_marginTop="25dp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:text="@string/area"
        android:layout_below="@+id/labelSpinner4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/labelSpinner5"
        android:layout_alignBaseline="@id/labelSpinner5"
        android:id="@+id/spinner5"
        />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/labelSpinner1"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
